Archive2/f3/b5cb9e73feb383/output
main.cpp: In function 'int main()':
main.cpp:8:28: error: invalid use of incomplete type 'struct s<32>'
     s<sizeof(max_align_t)>();
                            ^
main.cpp:3:22: error: declaration of 'struct s<32>'
 template<int> struct s;
                      ^
