Archive2/f3/b5cb9e73feb383/main.cpp
#include <cstddef>

template<int> struct s;


int main()
{
    s<sizeof(max_align_t)>();
}